_1.2.2_nginx_ingress/test/new/app/test_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-nginx-deployment
  namespace: app
  labels:
    app: app3-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3-nginx
  template:
    metadata:
      labels:
        app: app3-nginx
    spec:
      containers:
        - name: app2-nginx
          image: stacksimplify/kubenginx:1.0.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3-nginx-deployment-ingress
  namespace: app
  labels:
    app.kubernetes.io/name: test-ingress
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: test-ingress
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
